--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .containerleft 
 {
     float: left;
-    background-image: url("./images/artyzanopizza3.jpg");
+    background-image: url("./artyzanopizza3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 50%;
